# ScriptEditor

./: CMakeLists.txt  common_kw.yml  main.cpp
Backend/: AstAnalyzer.cpp  BackendAnalyzer.cpp  BackendAnalyzer.h  Gen.bat  SyntaxErrorListener.cpp  SyntaxErrorListener.h
Backend/antlr4/: KeywordGrammar.g4
Backend/antlr4/.antlr/: KeywordGrammar.interp  KeywordGrammarLexer.interp  KeywordGrammarLexer.java  KeywordGrammarParser.java  KeywordLexerLexer.java
Common/: TypeDef.h
Editor/: CodeEditor.cpp  CodeEditor.h  KeywordDefination.cpp  KeywordDefination.h
FrontEnd/: AstAnalysis.cpp  AstAnalysis.h  AstAnalyzer.h  Gen.bat  SyntaxErrorListener.cpp  SyntaxErrorListener.h
FrontEnd/antlr4/: KeywordGrammar.g4  KeywordLexer.g4
FrontEnd/antlr4/.antlr/: KeywordGrammar.tokens  KeywordLexerLexer.interp  KeywordLexerLexer.tokens
antlr_tool/: Gen.bat  Run.bat
